# ur

./: CMakeLists.txt  README.md
Settings/: EN.js  PI.js  PL.js  SU.js  UA.js  colors.js  dark.js  gameState.js  preferences.js
src/: main.cpp
src/Exit/: ExitController.h  ExitModel.h  ExitView.h
src/Game/: Board.h  Dice.h  GameController.h  GameModel.h  GameState.h  GameView.h  Indicator.h  Piece.h  Player.h  Tile.h
src/Lib/: json.hpp
src/MVC/: Controller.h  MVC.h  Model.h  View.h
src/Menu/: MenuController.h  MenuModel.h  MenuView.h
src/Rules/: RulesController.h  RulesModel.h  RulesView.h
src/Settings/: Config.h  Setting.h  SettingsController.h  SettingsModel.h  SettingsView.h
src/UI/: Button.h  Clickable.h  Drawable.h  Highlightable.h  JukeBox.h  TextButton.h  UI.h
